rsworkspace/crates/trogon-decider-guest-macros/tests/ui/not_a_decider.stderr
error[E0277]: the trait bound `NotADecider: Decider` is not satisfied
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ unsatisfied trait bound
   |
help: the trait `Decider` is not implemented for `NotADecider`
  --> tests/ui/not_a_decider.rs:4:1
   |
 4 | struct NotADecider;
   | ^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `export_decider` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotADecider: Decider` is not satisfied in `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ unsatisfied trait bound
   |
help: within `Session`, the trait `Decider` is not implemented for `NotADecider`
  --> tests/ui/not_a_decider.rs:4:1
   |
 4 | struct NotADecider;
   | ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^
note: required by a bound in `Guest::Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ required by this bound in `Guest::Session`
   = note: this error originates in the macro `export_decider` which comes from the expansion of the macro `wit_bindgen::generate` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider relaxing the implicit `Sized` restriction
   |
12 | }) + ?Sized;
   |    ++++++++

error[E0277]: the trait bound `NotADecider: Decider` is not satisfied in `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ unsatisfied trait bound
   |
help: within `Session`, the trait `Decider` is not implemented for `NotADecider`
  --> tests/ui/not_a_decider.rs:4:1
   |
 4 | struct NotADecider;
   | ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^
   = note: the return type of a function must have a statically known size
   = note: this error originates in the macro `export_decider` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotADecider: Decider` is not satisfied
 --> tests/ui/not_a_decider.rs:6:17
  |
6 | export_decider!(NotADecider {
  |                 ^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `Decider` is not implemented for `NotADecider`
 --> tests/ui/not_a_decider.rs:4:1
  |
4 | struct NotADecider;
  | ^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `NotADecider: From<CreateSchedule>` is not satisfied
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ unsatisfied trait bound
   |
help: the trait `From<CreateSchedule>` is not implemented for `NotADecider`
  --> tests/ui/not_a_decider.rs:4:1
   |
 4 | struct NotADecider;
   | ^^^^^^^^^^^^^^^^^^
   = note: required for `CreateSchedule` to implement `Into<NotADecider>`
   = note: required for `NotADecider` to implement `TryFrom<CreateSchedule>`
   = note: this error originates in the macro `export_decider` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Ref<'_, _>: buffa::message::Message` is not satisfied
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ the trait `buffa::message::Message` is not implemented for `Ref<'_, _>`
   |
   = help: the following other types implement trait `buffa::message::Message`:
             Content
             CreateSchedule
             DateTime
             PauseSchedule
             RemoveSchedule
             ResumeSchedule
             ScheduleCheckpoint
             ScheduleEvent
           and $N others
note: required by a bound in `encode_current`
  --> $WORKSPACE/crates/trogon-decider-guest-sdk/src/snapshot.rs
   |
   | pub fn encode_current<S>(state: &S, schema_version: &str) -> Option<Vec<u8>>
   |        -------------- required by a bound in this function
   | where
   |     S: buffa::Message,
   |        ^^^^^^^^^^^^^^ required by this bound in `encode_current`
   = note: this error originates in the macro `export_decider` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotADecider: Decider` is not satisfied in `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ unsatisfied trait bound
   |
help: within `Session`, the trait `Decider` is not implemented for `NotADecider`
  --> tests/ui/not_a_decider.rs:4:1
   |
 4 | struct NotADecider;
   | ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^
note: required by an implicit `Sized` bound in `_export_constructor_session_cabi`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ required by the implicit `Sized` requirement on this type parameter in `_export_constructor_session_cabi`
   = note: this error originates in the macro `export_decider` which comes from the expansion of the macro `wit_bindgen::generate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotADecider: Decider` is not satisfied in `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ unsatisfied trait bound
   |
help: within `Session`, the trait `Decider` is not implemented for `NotADecider`
  --> tests/ui/not_a_decider.rs:4:1
   |
 4 | struct NotADecider;
   | ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^
note: required by an implicit `Sized` bound in `_export_method_session_evolve_cabi`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ required by the implicit `Sized` requirement on this type parameter in `_export_method_session_evolve_cabi`
   = note: this error originates in the macro `export_decider` which comes from the expansion of the macro `wit_bindgen::generate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotADecider: Decider` is not satisfied in `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ unsatisfied trait bound
   |
help: within `Session`, the trait `Decider` is not implemented for `NotADecider`
  --> tests/ui/not_a_decider.rs:4:1
   |
 4 | struct NotADecider;
   | ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^
note: required by an implicit `Sized` bound in `__post_return_method_session_evolve`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ required by the implicit `Sized` requirement on this type parameter in `__post_return_method_session_evolve`
   = note: this error originates in the macro `export_decider` which comes from the expansion of the macro `wit_bindgen::generate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotADecider: Decider` is not satisfied in `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ unsatisfied trait bound
   |
help: within `Session`, the trait `Decider` is not implemented for `NotADecider`
  --> tests/ui/not_a_decider.rs:4:1
   |
 4 | struct NotADecider;
   | ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^
note: required by an implicit `Sized` bound in `_export_method_session_decide_cabi`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ required by the implicit `Sized` requirement on this type parameter in `_export_method_session_decide_cabi`
   = note: this error originates in the macro `export_decider` which comes from the expansion of the macro `wit_bindgen::generate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotADecider: Decider` is not satisfied in `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ unsatisfied trait bound
   |
help: within `Session`, the trait `Decider` is not implemented for `NotADecider`
  --> tests/ui/not_a_decider.rs:4:1
   |
 4 | struct NotADecider;
   | ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^
note: required by an implicit `Sized` bound in `__post_return_method_session_decide`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ required by the implicit `Sized` requirement on this type parameter in `__post_return_method_session_decide`
   = note: this error originates in the macro `export_decider` which comes from the expansion of the macro `wit_bindgen::generate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotADecider: Decider` is not satisfied in `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ unsatisfied trait bound
   |
help: within `Session`, the trait `Decider` is not implemented for `NotADecider`
  --> tests/ui/not_a_decider.rs:4:1
   |
 4 | struct NotADecider;
   | ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^
note: required by an implicit `Sized` bound in `_export_method_session_snapshot_cabi`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ required by the implicit `Sized` requirement on this type parameter in `_export_method_session_snapshot_cabi`
   = note: this error originates in the macro `export_decider` which comes from the expansion of the macro `wit_bindgen::generate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotADecider: Decider` is not satisfied in `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ unsatisfied trait bound
   |
help: within `Session`, the trait `Decider` is not implemented for `NotADecider`
  --> tests/ui/not_a_decider.rs:4:1
   |
 4 | struct NotADecider;
   | ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^
note: required by an implicit `Sized` bound in `__post_return_method_session_snapshot`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ required by the implicit `Sized` requirement on this type parameter in `__post_return_method_session_snapshot`
   = note: this error originates in the macro `export_decider` which comes from the expansion of the macro `wit_bindgen::generate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotADecider: Decider` is not satisfied in `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ unsatisfied trait bound
   |
help: within `Session`, the trait `Decider` is not implemented for `NotADecider`
  --> tests/ui/not_a_decider.rs:4:1
   |
 4 | struct NotADecider;
   | ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `Session`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^
note: required by an implicit `Sized` bound in `handler::Session::dtor`
  --> tests/ui/not_a_decider.rs:6:1
   |
 6 | / export_decider!(NotADecider {
 7 | |     type_url = CREATE_SCHEDULE_TYPE_URL,
 8 | |     proto = v1::CreateSchedule,
 9 | |     module = "scheduler.schedules",
10 | |     version = "0.1.0",
11 | |     state_schema_version = SCHEDULES_STATE_SCHEMA_VERSION,
12 | | });
   | |__^ required by the implicit `Sized` requirement on this type parameter in `Session::dtor`
   = note: this error originates in the macro `export_decider` which comes from the expansion of the macro `wit_bindgen::generate` (in Nightly builds, run with -Z macro-backtrace for more info)
